--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,19 @@
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Active+Directory+Plugin</url>
 
   <scm>
-   <connection>scm:git:git://github.com/jenkinsci/active-directory-plugin.git</connection>
-   <developerConnection>scm:git:git@github.com:jenkinsci/active-directory-plugin.git</developerConnection>
-   <url>https://github.com/jenkinsci/active-directory-plugin</url>
+   <connection>scm:git:git://github.com/palemtnrider/active-directory-plugin.git</connection>
+   <developerConnection>scm:git:git@github.com:palemtnrider/active-directory-plugin.git</developerConnection>
+   <url>https://github.com/palemtnrider/active-directory-plugin</url>
   </scm>
 
   <developers>
     <developer>
       <id>kohsuke</id>
       <name>Kohsuke Kawaguchi</name>
+    </developer>
+    <developer>
+      <id>palemtnrider</id>
+      <name>Mark Emeis</name>
     </developer>
   </developers>
 
@@ -62,5 +66,5 @@
             <url>http://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
-</project>  
+</project>
 
